# ethervoxai

./: .env.example  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  ERROR_MIGRATION_SUMMARY.md  MIGRATION_CHECKLIST.md  README.md  SUBMODULE_MANAGEMENT.md  THIRD_PARTY_LICENSES.md  TOOL_TEST_SCENARIOS.md  ethervox_multiplatform_core.c  fix-devnull.py  fix-unicode.ps1  fix-unicode.py  run_debug.sh  test_compute_tools  test_error_main.sh  test_governor  test_mic_direct.c  test_voice_persistence.sh  test_wake_conversation.sh
.github/: copilot-instructions.md  error-handling-reference.md
.github/workflows/: build-and-test.yml
Testing/Temporary/: CTestCostData.txt
archive/: Makefile.test
cmake/: FetchDependencies.cmake  patch_cjson.cmake  validate_github_token.cmake
docs/: ADDING_NEW_COMMAND.md  ADDING_NEW_LLM_TOOL.md  AEC_GETTING_STARTED.md  AEC_PIPER_IMPLEMENTATION_PLAN.md  ANDROID_ARCHITECTURE.md  ANDROID_MOBILE_OPTIMIZATION_BINDINGS.kt  ANDROID_REFACTORING_COMPLETE.md  BENCHMARK_RESULTS.md  BUG_REPORTER_SECURITY.md  CODE_DUPLICATION_AUDIT.md  CONVERSATION_INTEGRATION.md  DEPENDENCY_MANAGEMENT.md  DYNAMIC_TOOL_LOADING.md  ESPEAK_DICT_DEBUG.md  ESPEAK_DICT_LICENSING.md  FETCHCONTENT_IMPLEMENTATION.md  FLAG_VALIDATION.md  GITHUB_ACTIONS_SECRETS.md  GITHUB_TOKEN_VALIDATION.md  GOVERNOR_ARCHITECTURE.md  GOVERNOR_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY_MOBILE_FEATURES.md  INCREMENTAL_TOOL_OPTIMIZATION.md  INTEGRATION_GUIDE.md  JNI_SIGNATURE_UPDATE_OPTIMIZE_TOOL_PROMPTS.md  MACOS_APP_IMPLEMENTATION.md  MOBILE_OPTIMIZATION.md  MODEL_MANAGEMENT.md  MODEL_MANAGEMENT_IMPLEMENTATION.md  MULTILINGUAL_TTS.md  MULTI_PLATFORM_TOKENS.md  PATH_CONFIGURATION.md  PHONEMIZER_IMPLEMENTATION_PLAN.md  PHONEMIZER_PHASE1_COMPLETE.md  PHONEMIZER_PHASE2_COMPLETE.md  PHONEMIZER_TRAINING.md  PHONEMIZER_TRAINING_EXAMPLE.md  PLATFORM_ARCHITECTURE_CRITIQUE.md  PLATFORM_UI_ARCHITECTURE.md  PRONUNCIATION_TRAINING.md  (+26 more)
esp32-project/: README.md
examples/: CMakeLists.txt  llm_example.c  memory_example.c  memory_example_memonly.c  model_manager_example.c
examples/voice_assistant/: main.c
include/ethervox/: aec.h  audio.h  audio_recording.h  audio_stream_player.h  bug_reporter.h  chat_template.h  compute_tools.h  config.h  context_tools.h  conversation.h  conversation_summary.h  conversation_tools.h  device_profile.h  dialogue.h  error.h  file_tools.h  get_tool_info.h  gguf_config_helper.h  governor.h  integration_tests.h  kv_cache_persistence.h  language_detector.h  llm.h  llm_tool_tests.h  memory_tools.h  model_downloader.h  model_manager.h  platform.h  platform_http.h  platform_utils.h  platform_zip.h  plugins.h  pronunciation_trainer.h  reference_buffer.h  settings.h  settings_menu.h  startup_prompt_tools.h  stt.h  system_info_tools.h  text_normalizer.h  (+9 more)
models/: .gitkeep
scripts/: README.md  build.sh  download-governor-model.sh  download-multilingual-models.sh  download-piper-model.sh  download-vosk-model.sh  download-whisper-model.sh  download_phonemizer_data.sh  generate_tool_manifest.py  init-dependencies.sh  setup-env.sh  setup-esp32-toolchain.sh  setup-macos-toolchain.sh  setup-rpi-toolchain.sh  setup-vosk.sh  setup-windows-toolchain.sh  test-model-manager.sh
sdk/: ethervox_sdk.c  ethervox_sdk.h
sdk/examples/: intent_plugin_example.c
src/: main.c  tmp.txt
src/audio/: CMakeLists.txt  aec_speex.c  audio_core.c  audio_recording.c  audio_stream_player.c  platform_android.c  platform_esp32.c  platform_linux.c  platform_macos.c  platform_rpi.c  platform_windows.c  reference_buffer.c
src/common/: bug_reporter.c  error.c  language_detector.c  logging.c  model_downloader.c  platform_http.c  platform_utils_unix.c  platform_utils_windows.c  settings_menu.c
src/dialogue/: tmp  (+8 more)
src/governor/: CMakeLists.txt  chat_template.c  conversation_summary.c  governor.c  governor_helpers.c  governor_helpers.h  governor_manifest_init.c  governor_streaming.c.disabled  kv_cache_persistence.c  minimal_system_prompt.c  test_compute_tools.c  test_governor.c  tool_manifest.c  tool_optimized_prompts.c  tool_prompt_optimizer.c  tool_prompt_optimizer_v2.c  tool_registry.c
src/plugins/compute_tools/: CMakeLists.txt  calculator_plugin.c  compute_tools_registry.c  percentage_plugin.c  time_query_plugin.c
src/plugins/conversation_tools/: CMakeLists.txt  conversation_tools_registry.c  listen.c  speak.c  train_pronunciation.c
src/plugins/weather_tools/: CMakeLists.txt  weather_cache.c  weather_core.c  weather_http_android.c  weather_registry.c
src/plugins/workspace_tools/: CMakeLists.txt  workspace_operations.h  workspace_tools.c
tests/: ADAPTIVE_TESTS.md  CMakeLists.txt  benchmark_tool_manifest.c  debug_test  debug_test.c  test_aec_infrastructure.c  test_error.c  test_gguf_metadata_real.c  test_governor_helpers.c  test_governor_streaming.c  test_lang_debug.c  test_lookahead_filtering.c  test_stop_token_detection.c  test_tool_manifest.c
tests/integration/: test_conversation_commands.sh  test_conversation_integration.sh  test_end_to_end.c  test_optimize.sh  test_voice_training_integration.c  test_vosk_realtime.sh
tests/unit/: test_adaptive_memory.c  test_audio_core.c  test_audio_integration.c  test_cache_summarization.c  test_config.c  test_context_overflow.c  test_device_profile.c  test_error.c  test_file_append.c  test_file_tools.c  test_gguf_config.c  test_kv_cache_management.c  test_language_detector.c  test_memory_archive.c  test_memory_tools.c  test_mic_direct.c  test_mobile_optimization.c  test_phonemizer.c  test_phonemizer_chinese.c  test_phonemizer_german.c  test_piper_phonemizers.c  test_plugin_manager.c  test_secret_mode.c  test_settings_persistence.c  test_tool_descriptions.c  test_tts_synthesis.c  test_tts_text_to_phoneme.c  test_unit_conversion.c  test_voice_conversation.c  test_voice_training.c  test_wake_word.c
tools/: README.md  README_VOCAB.md  emotion_tester.c  generate_espeak_dict.py  generate_single_dict.sh  setup_python_env.sh  train_phonemizer.sh  validate_espeak_dict.py  vocab_cmn.txt  vocab_de.txt  vocab_de_large.txt  vocab_es_419.txt  vocab_es_large.txt  voice_tuner.c
(+77 files in other folders)
